z-index fix for back to top

--- a/css/style.css
+++ b/css/style.css
@@ -4376,6 +4376,7 @@ ul.footer-nav li a:hover {
     position: fixed;
     bottom: 18px;
     right: 15px;
+    z-index:999999;
 }
 
 .back-to-top i {
